update about urls

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
                 <li><a href="#">Center</a></li>
               </ul> -->
               <ul class="nav navbar-nav navbar-right about minpadding">
-                  <li><a class="btn btn-default selpadding" href="/aboutzodo" target="_new">About GB2</a></li>
+                  <li><a class="btn btn-default selpadding" href="/aboutgeoboost2" target="_new">About GB2</a></li>
               </ul>
         </div>
       </nav>
