--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -8,7 +8,7 @@
             <li><a href="#">Center</a></li>
           </ul> -->
           <ul class="nav navbar-nav navbar-right minpadding">
-              <li><a href="/aboutzodo" target="_new">About GB2</a></li>
+              <li><a href="/aboutgeoboost2" target="_new">About GB2</a></li>
           </ul>
     </div>
 </nav>
